--- a/comparison.html
+++ b/comparison.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body>
+<body style="background-color:lightgrey">
 
     <!-- Navigation Bar at Top -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -50,6 +50,20 @@
           
         </div>
     </nav>
+
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 landingBox">
+            <div class="box skyblue">
+                <p></p>
+                <h2 class="titleColor">Comparison: Latitude vs X</h2>
+                <hr>
+                <p>Click any plot for more information</p>
+            </div>
+        </div>
+
+
+    </div>
   
 </body>
 
