figured out how to make the really annoying grid do the things

--- a/index.html
+++ b/index.html
@@ -52,37 +52,32 @@
     </nav>
 
     <div class="container" >
-        <div class="row">
-            <div class="col-md-8 landingBox">
-                <div class="box skyblue">
-                    <p></p>
-                    <h2 class="titleColor">Summary: Latitude vs X</h2>
-                    <hr>
-                    <img class="landingImage" src="assets/LatVsCloud.png">
-                    <p>How does weather change with latitude?  We used data from the OpenWeatherMap API and MatPlotLib to visalize how latitude affects temperature, humidity, cloudiness and wind speed.  </p>
-                    <p>This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-                </div>
+        <div class="col-md-8 landingBox" style="float:left">
+            <div class="box skyblue">
+                <p></p>
+                <h2 class="titleColor">Summary: Latitude vs X</h2>
+                <hr>
+                <img class="landingImage" src="assets/LatVsCloud.png">
+                <p>How does weather change with latitude?  We used data from the OpenWeatherMap API and MatPlotLib to visalize how latitude affects temperature,    humidity, cloudiness and wind speed.  </p>
+                <p>This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
             </div>
-            <div class="col-md-4 landingBox">
-                    <div class="box skyblue">
-                        <h3 class="titleColor">Visualizations</h2>
-                        <hr>
-                    </div>
-                    <div class="row">
-                        <div class="column">
-                        <img src="assets/LatVsCloud.png">
-                        <img src="assets/LatVsHumidity.png">
-                    </div>
-                    <div class="column">
-                        <img src="assets/LatVsTemp.png">
-                        <img src="assets/LatVsWind.png">
-                    </div>
-                    </div>
-
-                </div> 
         </div>
-        
+        <div class="col-md-4 col-sm-12 landingBox">
+            <div>
+                <p></p>
+                <h3 class="titleColor">Visualizations</h2>
+                <hr>
+            </div>
+            <div class="row">
+                <img class="gridImage-md gridImage-sm" src="assets/LatVsCloud.png">
+                <img class="gridImage-md gridImage-sm" src="assets/LatVsHumidity.png">
+                <img class="gridImage-md gridImage-sm" src="assets/LatVsTemp.png">
+                <img class="gridImage-md gridImage-sm" src="assets/LatVsWind.png">
+            </div>
+        </div> 
     </div>
+        
+
 
   
 </body>
