--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
+
+    <!-- favicon icon -->
+    <link rel="icon" href="assets/favicon.png">
+
+    <!-- bootstrap stylesheets and jquery imkports and etc -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <!-- link css sheet  -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -43,16 +49,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="data.html">Data</a>
                     </li>
-
             </ul>
-
-          
-          
         </div>
     </nav>
 
     <div class="container" >
-        <div class="col-md-8 landingBox" style="float:left">
+        <div class="col-md-7 col-sm-12 landingBox" style="float:left">
             <div class="box skyblue">
                 <p></p>
                 <h2 class="titleColor">Summary: Latitude vs X</h2>
@@ -62,7 +64,7 @@
                 <p>This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
             </div>
         </div>
-        <div class="col-md-4 col-sm-12 landingBox">
+        <div class="col-md-5 col-sm-12 landingBox">
             <div>
                 <p></p>
                 <h3 class="titleColor">Visualizations</h2>
