--- a/cloudiness.html
+++ b/cloudiness.html
@@ -64,7 +64,7 @@
                 <h2 class="titleColor">Cloudiness</h2>
                 <hr>
                 <img class="center" src="assets/LatVsCloud.png">
-                <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitutde).  More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere.  This may be due to the tilt of the earth at the time of year the data was gathered.</p>
+                <p>Cloudiness, unlike temperature, is not affected by latitude.</p>
             </div>
         </div>
         <div class="col-md-4 col-sm-12 landingBox">
