--- a/humidity.html
+++ b/humidity.html
@@ -64,7 +64,7 @@
                     <h2 class="titleColor">Humidity</h2>
                     <hr>
                     <img class="center" src="assets/LatVsHumidity.png">
-                    <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitutde).  More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere.  This may be due to the tilt of the earth at the time of year the data was gathered.</p>
+                    <p>Humidity does not seem to be correlated with latitude.  Most cities tend to have higher humidity in general.</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-12 landingBox">
