--- a/wind.html
+++ b/wind.html
@@ -64,7 +64,7 @@
                     <h2 class="titleColor">Wind Speed</h2>
                     <hr>
                     <img class="center" src="assets/LatVsWind.png">
-                    <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitutde).  More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere.  This may be due to the tilt of the earth at the time of year the data was gathered.</p>
+                    <p>WInd speed slightly increased the farther you get from the equator, but overall does not seem to be affected much by latitude.</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-12 landingBox">
