added links to images

--- a/comparison.html
+++ b/comparison.html
@@ -70,25 +70,25 @@
 
                 <div class="row">
 
-                    <figure class="gridImage-md"> 
+                    <figure class="gridImage-md-c"> 
                         <figcaption class="imageCaption" >Latitude vs. Cloudiness</figcaption>
                         <a href="cloudiness.html">
                             <img src="assets/LatVsCloud.png">
                         </a>
                     </figure>
-                    <figure class="gridImage-md"> 
+                    <figure class="gridImage-md-c"> 
                         <figcaption class="imageCaption" >Latitude vs. Humidity</figcaption>
                         <a href="humidity.html">
                             <img src="assets/LatVsHumidity.png">
                         </a>    
                     </figure>
-                    <figure class="gridImage-md"> 
+                    <figure class="gridImage-md-c"> 
                         <figcaption class="imageCaption" >Latitude vs. Temperature</figcaption>
                         <a href="temperature.html">
                             <img src="assets/LatVsTemp.png">
                         </a>
                     </figure>
-                    <figure class="gridImage-md"> 
+                    <figure class="gridImage-md-c"> 
                         <figcaption class="imageCaption" >Latitude vs. Wind Speed</figcaption>
                         <a href="wind.html">
                             <img src="assets/LatVsWind.png">
