--- a/humidity.html
+++ b/humidity.html
@@ -68,18 +68,28 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-12 landingBox">
-                <div>
-                    <p></p>
-                    <h3 class="titleColor">Visualizations</h2>
-                    <hr>
-                </div>
-                <div class="row">
-                    <img class="gridImage-md gridImage-sm" src="assets/LatVsCloud.png">
-                    <img class="gridImage-md gridImage-sm" src="assets/LatVsHumidity.png">
-                    <img class="gridImage-md gridImage-sm" src="assets/LatVsTemp.png">
-                    <img class="gridImage-md gridImage-sm" src="assets/LatVsWind.png">
-                </div>
-            </div> 
+                    <div>
+                        <p></p>
+                        <h3 class="titleColor">Visualizations</h2>
+                        <hr>
+                    </div>
+                    <div class="row">
+                        <a href="cloudiness.html">
+                            <img class="gridImage-md gridImage-sm" src="assets/LatVsCloud.png">
+                        </a>
+                        <a href="humidity">
+                           <img class="gridImage-md gridImage-sm" src="assets/LatVsHumidity.png">
+                        </a>
+                        <a href="temperature.html">
+                            <img class="gridImage-md gridImage-sm" src="assets/LatVsTemp.png">
+                        </a>
+                        <a href="wind.html">
+                            <img class="gridImage-md gridImage-sm" src="assets/LatVsWind.png">
+                        </a>
+                    </div>
+        
+                   
+                </div>  
         </div>
   
 </body>
