--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </nav>
 
     <div class="container" >
-        <div class="col-md-7 col-sm-12 landingBox" style="float:left">
+            <div class="row">
+        <div class="col-md-8 col-sm-12 landingBox" style="float:left">
             <div class="box skyblue">
                 <p></p>
                 <h2 class="titleColor">Summary: Latitude vs X</h2>
@@ -64,19 +65,29 @@
                 <p>After assembling the dataset, we used MatPlotLib to plot various aspects of the weather vs. latitude.  Factors we looked at included: temperature, cloudiness, wind speed, and humidity.  This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
             </div>
         </div>
-        <div class="col-md-5 col-sm-12 landingBox">
-            <div>
-                <p></p>
-                <h3 class="titleColor">Visualizations</h2>
-                <hr>
-            </div>
-            <div class="row">
-                <img class="gridImage-md gridImage-sm" src="assets/LatVsCloud.png">
-                <img class="gridImage-md gridImage-sm" src="assets/LatVsHumidity.png">
-                <img class="gridImage-md gridImage-sm" src="assets/LatVsTemp.png">
-                <img class="gridImage-md gridImage-sm" src="assets/LatVsWind.png">
-            </div>
-        </div> 
+        <div class="col-md-4 col-sm-12 landingBox">
+                <div>
+                    <p></p>
+                    <h3 class="titleColor">Visualizations</h2>
+                    <hr>
+                </div>
+                <div class="row">
+                    <a href="cloudiness.html">
+                        <img class="gridImage-md gridImage-sm" src="assets/LatVsCloud.png">
+                    </a>
+                    <a href="humidity">
+                       <img class="gridImage-md gridImage-sm" src="assets/LatVsHumidity.png">
+                    </a>
+                    <a href="temperature.html">
+                        <img class="gridImage-md gridImage-sm" src="assets/LatVsTemp.png">
+                    </a>
+                    <a href="wind.html">
+                        <img class="gridImage-md gridImage-sm" src="assets/LatVsWind.png">
+                    </a>
+                </div>
+    
+               
+            </div>  
     </div>
 </body>
 
