--- a/humidity.html
+++ b/humidity.html
@@ -77,7 +77,7 @@
                         <a href="cloudiness.html">
                             <img class="gridImage-md gridImage-sm" src="assets/LatVsCloud.png">
                         </a>
-                        <a href="humidity">
+                        <a href="humidity.html">
                            <img class="gridImage-md gridImage-sm" src="assets/LatVsHumidity.png">
                         </a>
                         <a href="temperature.html">
