body color changes and indent fixing

--- a/data.html
+++ b/data.html
@@ -20,7 +20,7 @@
 </head>
 
 
-<body style="background-color:lightgrey">
+<body>
 
     <!-- Navigation Bar at Top -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -48,15 +48,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="data.html">Data</a>
-                    </li>
-
-            </ul>
-
-          
-          
+                  </li>
+            </ul>  
         </div>
     </nav>
 
+    <!-- create box for table and then add table (straight from pandas to_html) -->
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8 landingBox">
