--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 
-<body style="background-color:lightgrey">
+<body class="body">
 
     <!-- Navigation Bar at Top -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -48,35 +48,38 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="data.html">Data</a>
-                    </li>
+                </li>
             </ul>
         </div>
     </nav>
 
+    <!-- set up main box with image in it's own container -->
     <div class="container" >
-            <div class="row">
-        <div class="col-md-8 col-sm-12 landingBox" style="float:left">
-            <div class="box skyblue">
-                <p></p>
-                <h2 class="titleColor">Summary: Latitude vs X</h2>
-                <hr>
-                <img class="landingImage" src="assets/LatVsCloud.png">
-                <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis we first pulled data from OpenWeatherMap API to assemble a dataset on other 500 cities. </p>
-                <p>After assembling the dataset, we used MatPlotLib to plot various aspects of the weather vs. latitude.  Factors we looked at included: temperature, cloudiness, wind speed, and humidity.  This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+        <div class="row">
+            <div class="col-md-8 col-sm-12 landingBox" style="float:left">
+                <div class="box skyblue">
+                    <p></p>
+                    <h2 class="titleColor">Summary: Latitude vs X</h2>
+                    <hr>
+                    <img class="landingImage" src="assets/LatVsCloud.png">
+                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis we first pulled data from OpenWeatherMap API to assemble a dataset on other 500 cities. </p>
+                    <p>After assembling the dataset, we used MatPlotLib to plot various aspects of the weather vs. latitude.  Factors we looked at included: temperature, cloudiness, wind speed, and humidity.  This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4 col-sm-12 landingBox">
+
+        <!-- visualization grid with four images on the right hand side -->
+            <div class="col-md-4 col-sm-12 landingBox">
                 <div>
                     <p></p>
                     <h3 class="titleColor">Visualizations</h2>
                     <hr>
                 </div>
                 <div class="row">
-                    <a href="cloudiness.html">
+                    <!-- <a href="cloudiness.html"> all of the images link to their respective pages -->
                         <img class="gridImage-md gridImage-sm" src="assets/LatVsCloud.png">
                     </a>
                     <a href="humidity.html">
-                       <img class="gridImage-md gridImage-sm" src="assets/LatVsHumidity.png">
+                        <img class="gridImage-md gridImage-sm" src="assets/LatVsHumidity.png">
                     </a>
                     <a href="temperature.html">
                         <img class="gridImage-md gridImage-sm" src="assets/LatVsTemp.png">
@@ -85,9 +88,8 @@
                         <img class="gridImage-md gridImage-sm" src="assets/LatVsWind.png">
                     </a>
                 </div>
-    
-               
             </div>  
+        </div>
     </div>
 </body>
 
